v2.0/yoti/getting-started-sign.md
---
type: page
title: Getting Started
listed: true
slug: getting-started-sign
description: 
index_title: Getting Started
hidden: 
keywords: 
tags: 
---

Welcome to the developer documentation for integrating with Yoti Sign.  Yoti Sign offers the convenience and simplicity of e-signing platforms, but with the added security of biometric verification and cryptographic signatures.

{% html %}
<div class="alert-BYS">

   <div class="alert-title" id="BYS">

      Before you start

   </div>

   <div class="alert-text" >

      You will need to have registered your business with YotiSign.

   </div>

   <div class="alert-links"> 

         <a href="https://www.yotisign.com/app/contact-us/">Register now</a>

   </div>

</div>
{% /html %}

Our sales team will be in contact with you within 24 hours of your request.

---

## Yoti Sign integration live demo

Talk to an expert to explore how our solutions can help your business send, sign and manage documents faster and cheaper.

**[Yoti World](https://yoti.world/bank-sign/)**

Note: You will need the Yoti app to use this demo and access to your emails. 

---

## Examples

[Javascript](https://github.com/getyoti/yoti-sign-examples/tree/master/javascript)

[.NET](https://github.com/getyoti/yoti-sign-examples/tree/master/dotnet)

[Go](https://github.com/getyoti/yoti-sign-examples/tree/master/go)

[Java](https://github.com/getyoti/yoti-sign-examples/tree/master/java)

[PHP](https://github.com/getyoti/yoti-sign-examples/tree/master/php)

{% html %}
<div class="alert-API">

    <div class="alert-title" id="API">

    <i _ngcontent-cvo-c21="" class="fas fa-external-link-alt" style="margin-left: -35px; margin-right: 15px"></i>  

      API Link

    </div>

    <div class="alert-text">

     Jump straight to our API references with code snippets if you prefer.

    </div>

    <div class="alert-links"> 

        <a href="https://www.yoti.com/api-reference/#yoti-sign">Yoti Sign API</a>

    </div>

</div>
{% /html %}